ud1: exemples canonades
no funcionen amb powershell, cal utilitzar wsl